# template-rust-warp

./: .gitignore  .releaserc  Cargo.toml  Dockerfile  Dockerfile.dev  OWNERS  OWNERS_ALIASES  README.md  config.yaml  new_index.html
.lighthouse/jenkins-x/: pullrequest.yaml  release.yaml  unit-test.yaml
charts/homepage/: Chart.yaml  Makefile  values.yaml
charts/homepage/templates/: _helpers.tpl  certificate.yaml  deployment.yaml  hpa.yaml  ingress-ratelimited.yaml  ingress.yaml  sa.yaml  service.yaml  servicemonitor.yaml
config/: config.k8s.yaml  config.yaml  local.env  secrets.k8s.yaml
deploy/: deployment.yaml  externalsecret-config.yaml  externalsecret-env.yaml  kustomization.yaml  secretstore-homepage.yaml  service.yaml  serviceaccount.yaml  virtualservice.yaml
deploy/base/: deployment.yaml  externalsecret-config.yaml  externalsecret-env.yaml  kustomization.yaml  secretstore-homepage.yaml  service.yaml  serviceaccount.yaml  virtualservice.yaml
deploy/dev/: kustomization.yaml  virtualservice.yaml
deploy/prod/: kustomization.yaml  virtualservice-root.yaml  virtualservice.yaml
deploy/staging/: kustomization.yaml  virtualservice.yaml
preview/: Kptfile
src/: main.rs
static/: cloud.html  expandable.html  full-service.html  full-stack.html  highly-available.html  index.html  scalable.html
static/css/: global.css  index.css
