[package]
name = "homepage"
version = "0.1.0"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2021"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
redact-config = { git = "https://github.com/pauwels-labs/redact-config", rev = "eb523d478583cd9c4a917567658f9aca22d23f84" }
reqwest = { version = "0.10.8", default-features = false, features = ["json", "rustls-tls"] }
handlebars = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = { version = "0.13.1", features = ["process"] }
prometheus_exporter = "0.8.4"
rand = "0.8.5"
sha2 = "0.10.2"