[package]
name = "homepage"
version = "0.1.0"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.4"
redact-config = { git = "https://github.com/pauwels-labs/redact-config", rev = "2d1c3059bc37689ab432a4422765438f4d9a3125" }
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
handlebars = "4.3.6"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
prometheus = { version = "0.13.3", features = ["process"] }
prometheus_exporter = "0.8.5"
rand = "0.8.5"
sha2 = "0.10.6"